Fixed overflow problem

--- a/theme/body.less
+++ b/theme/body.less
@@ -14,5 +14,6 @@ body {
 
     color: @gray-dark;
     .base-typography;
+    padding-bottom: 65px;
 }
 
